--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 
 The Magnetometer interface provides information about the magnetic field as detected by the device’s primary magnetometer sensor.
 
+How to run the code? 
+
+Open the HTMl file in web broswer.
